# fastapi-bootstrap

./: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.test  README.md  SECURITY.md  deploy.sh  docker-compose.test.yml  docker-compose.yml  poe_tasks.toml  pyproject.toml  pytest.ini
.aws/: appspec-v1-dev.yaml  appspec-v1-prod.yaml  appspec-v1-test.yaml  task-definition-v1-dev.json  task-definition-v1-prod.json  task-definition-v1-test.json
.devcontainer/: devcontainer.json
.github/workflows/: code_quality.yml  deploy.yml  terraform-validate.yml
cli/: README.md  __init__.py  main.py
cli/commands/: __init__.py  deploy.py  dev.py  infra.py  init.py
cli/utils/: __init__.py  aws.py  config.py
docs/: architecture.md  blue-green-deployment.md  cdk-infrastructure.md  cost-optimization.md  deployment-guide.md  documentation-enhancements.md  infrastructure.md  local-development.md  observability.md  security.md
infrastructure/: __init__.py
infrastructure/awscdk/: app.py  constants.py
infrastructure/awscdk/stacks/: api_stack.py  database_stack.py  monitoring_stack.py
infrastructure/docker/: Dockerfile  Dockerfile.dev  Dockerfile.test  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  entrypoint.sh
infrastructure/docker/init-db/: 01-init.sh
infrastructure/scripts/: README.md  deploy.sh  generate-lambda-functions.sh  init.sh  setup-terraform-backend.sh  update-appspec.sh
infrastructure/terraform/modules/api_gateway/: main.tf
infrastructure/terraform/modules/codedeploy/: main.tf
infrastructure/terraform/modules/database/: main.tf
infrastructure/terraform/modules/iam/: main.tf
infrastructure/terraform/modules/lambda/: README.md  main.tf
infrastructure/terraform/modules/monitoring/: main.tf
infrastructure/terraform/modules/vpc/: main.tf
localstack/: init-aws.sh
scripts/: README.md  deploy.sh  init.sh
src/fastapi_bootstrap/: __init__.py  main.py
src/fastapi_bootstrap/api/v1/: __init__.py  router.py
src/fastapi_bootstrap/cli/: README.md  main.py
src/fastapi_bootstrap/cli/commands/: deploy.py  infra.py  init.py
src/fastapi_bootstrap/cli/utils/: credentials.py  docker.py
src/fastapi_bootstrap/infrastructure/: __init__.py  app.py
src/fastapi_bootstrap/infrastructure/stacks/: __init__.py  api_stack.py  database_stack.py  monitoring_stack.py
src/fastapi_bootstrap/utils/: README.md  __init__.py  middleware.py  telemetry.py
terraform/: main.tf
terraform/environments/dev/: terraform.tfvars  terraform.tfvars.example
terraform/environments/prod/: terraform.tfvars
terraform/environments/test/: terraform.tfvars
terraform/modules/codedeploy/: main.tf
terraform/modules/ecr/: main.tf
terraform/modules/ecs/: main.tf
terraform/modules/iam/: main.tf
terraform/modules/lambda/: README.md
terraform/modules/security/: main.tf
terraform/modules/ssm/: main.tf
terraform/modules/vpc/: main.tf
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_routers.py
