[project]
name = "fastapi_bootstrap"
requires-python = ">=3.11,<4.0"
dynamic = [ "version" ]
description = "A bootstrapped fastapi project, prioritizing clean architecture, testing, and easy deployment."
authors = [{name = "Michael VanDyke", email = "me@mjvandyke.com"}]
license = "MIT"
readme = "README.md"
keywords = ["fastapi", "bootstrap", "clean architecture", "testing", "IaC", "infrastructure as code", "deployment"]
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "fastapi (>=0.103.0,<0.104.0)",
    "uvicorn (>=0.23.0,<0.24.0)",
    "pydantic (>=2.0.0,<3.0.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)",
    "boto3 (>=1.38.31,<2.0.0)",
    "aws-xray-sdk (>=2.14.0,<3.0.0)",
    "mangum (>=0.19.0,<0.20.0)",
    "opentelemetry-api~=1.12",
    "opentelemetry-sdk~=1.12",
    "opentelemetry-instrumentation-fastapi>=0.40b0",
    "opentelemetry-instrumentation-requests>=0.40b0",
    "opentelemetry-instrumentation-botocore>=0.40b0",
    "opentelemetry-exporter-otlp>=0.40b0",
    "opentelemetry-propagator-aws-xray~=1.0",
]

[project.optional-dependencies]
jaeger = ["opentelemetry-exporter-jaeger>=0.40b0"]
prometheus = ["prometheus-client>=0.17.0", "opentelemetry-exporter-prometheus>=0.40b0"]
sqlalchemy = ["opentelemetry-instrumentation-sqlalchemy>=0.40b0"]
redis = ["opentelemetry-instrumentation-redis>=0.40b0"]
mysql = ["opentelemetry-instrumentation-pymysql>=0.40b0"]
all-instrumentation = [
    "opentelemetry-instrumentation-sqlalchemy>=0.40b0",
    "opentelemetry-instrumentation-redis>=0.40b0",
    "opentelemetry-instrumentation-pymysql>=0.40b0",
]
all-exporters = [
    "opentelemetry-exporter-jaeger>=0.40b0",
    "prometheus-client>=0.17.0",
    "opentelemetry-exporter-prometheus>=0.40b0",
]
all = [
    "opentelemetry-exporter-jaeger>=0.40b0",
    "prometheus-client>=0.17.0",
    "opentelemetry-exporter-prometheus>=0.40b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.40b0",
    "opentelemetry-instrumentation-redis>=0.40b0",
    "opentelemetry-instrumentation-pymysql>=0.40b0",
]

[project.urls]
homepage = "https://github.com/mvdmakesthings/fastapi-bootstrap"
repository = "https://github.com/mvdmakesthings/fastapi-bootstrap"

[tool.poetry]
version = "0.1.0"
packages = [{ include = "fastapi_bootstrap", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

### -------- Development Dependencies --------
[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"
codespell = "^2.4.1"
poethepoet = "^0.34.0"
pytest = "^7.4.0"
httpx = "^0.25.0"
pytest-cov = "^4.1.0"

[tool.poetry.requires-plugins]
poethepoet = { version = "~0.34.0", extras = ["poetry_plugin"]}

### -------- Automated Tasks ----------
[tool.poe.tasks]
lint = [
    { cmd = "ruff check ." },
    { cmd = "ruff check --select I ." },
    { cmd = "poetry check"}
]
spellcheck = "codespell --toml pyproject.toml"
fix = [
    { cmd = "poetry run ruff check --fix" },
    { cmd = "poetry run ruff check --select I --fix" },
    { cmd = "poetry run ruff format" },
    { cmd = "poetry run isort . --profile black" },
    { cmd = "poetry run codespell --toml pyproject.toml -w" },
]
version_bump_patch = "poetry version patch"
version_bump_minor = "poetry version minor"
version_bump_major = "poetry version major"
unittest = "poetry run pytest -v"

### -------- Development Tools --------
[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
