[project]
name = "fastapi_bootstrap"
requires-python = ">=3.11,<4.0"
dynamic = [ "version" ]
description = "A bootstrapped fastapi project, prioritizing clean architecture, testing, and easy deployment."
authors = [{name = "Michael VanDyke", email = "me@mjvandyke.com"}]
license = "MIT"
readme = "README.md"
keywords = ["fastapi", "bootstrap", "clean architecture", "testing", "IaC", "infrastructure as code", "deployment"]
dependencies = [
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "boto3",
    "aws-xray-sdk",
    "mangum",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-requests",
    "opentelemetry-instrumentation-botocore",
    "opentelemetry-sdk-extension-aws",
    "opentelemetry-exporter-otlp",
]

[project.optional-dependencies]
sqlalchemy = ["opentelemetry-instrumentation-sqlalchemy"]
redis = ["opentelemetry-instrumentation-redis"]
mysql = ["opentelemetry-instrumentation-pymysql"]
all-instrumentation = [
    "opentelemetry-instrumentation-sqlalchemy",
    "opentelemetry-instrumentation-redis",
    "opentelemetry-instrumentation-pymysql",
]

[project.urls]
homepage = "https://github.com/mvdmakesthings/fastapi-bootstrap"
repository = "https://github.com/mvdmakesthings/fastapi-bootstrap"

[tool.poetry]
version = "0.1.0"
packages = [{ include = "fastapi_bootstrap", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

### -------- Development Dependencies --------
[tool.poetry.group.dev.dependencies]
ruff = "*"
codespell = "*"
poethepoet = "*"
pytest = "*"
httpx = "*"
pytest-cov = "*"

[tool.poetry.requires-plugins]
poethepoet = { version = "~0.34.0", extras = ["poetry_plugin"]}

### -------- Automated Tasks ----------
[tool.poe.tasks]
lint = [
    { cmd = "ruff check ." },
    { cmd = "ruff check --select I ." },
    { cmd = "poetry check"}
]
spellcheck = "codespell --toml pyproject.toml"
fix = [
    { cmd = "poetry run ruff check --fix" },
    { cmd = "poetry run ruff check --select I --fix" },
    { cmd = "poetry run ruff format" },
    { cmd = "poetry run isort . --profile black" },
    { cmd = "poetry run codespell --toml pyproject.toml -w" },
]
version_bump_patch = "poetry version patch"
version_bump_minor = "poetry version minor"
version_bump_major = "poetry version major"
unittest = "poetry run pytest -v"

### -------- Development Tools --------
[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
